--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5"
   },
   "dependencies": {
+    "apollo-client": "^2.4.1",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -28,10 +30,11 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
+    "graphql": "^14.0.0",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "material-icons-react": "^1.0.2",
-    "mobx": "^5.1.0",
+    "mobx": "^4.4.0",
     "mobx-react": "^5.2.5",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -39,6 +42,7 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.4.2",
+    "react-apollo": "^2.1.11",
     "react-bootstrap": "^0.32.3",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.4.2",
